--- a/app/package.json
+++ b/app/package.json
@@ -11,7 +11,8 @@
     "flowbite": "^1.5.3",
     "pinia": "^2.0.17",
     "vue": "^3.2.37",
-    "vue-router": "^4.1.3"
+    "vue-router": "^4.1.3",
+    "vue-sweetalert2": "^5.0.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.1",
